slider and category section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
       </nav> -->
 
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg pb-3">
         <div class="container-fluid">
           <!-- <a class="navbar-brand" href="#">Navbar</a> -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -85,6 +85,172 @@
           </div>
         </div>
       </nav>
+
+      <!-- HEADER END  -->
+
+      <div class="categories d-flex align-items-center justify-content-center">
+        <div class="dropdown">
+          <button class="btn dropdown-toggle fw-bold" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            ALL CATEGORIES
+          </button>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item fw-bold" href="#">Mobiles</a></li>
+            <li><a class="dropdown-item" href="#">Mobile Phones</a></li>
+            <li><a class="dropdown-item" href="#">Accessories</a></li>
+            <li><a class="dropdown-item" href="#">Smart Watches</a></li>
+            <li><a class="dropdown-item" href="#">Tablets</a></li>
+          </ul>
+        </div>
+
+        <div class="categories-list d-flex align-items-center justify-content-center pt-3">
+          <p class="px-3">Mobile Phones</p>
+          <p class="px-3">Cars</p>
+          <p class="px-3">Motorcycles</p>
+          <p class="px-3">Houses</p>
+          <p class="px-3">Video-Audios</p>
+          <p class="px-3">Tablets</p>
+          <p class="px-3">Land & Plots</p>
+        </div>
+      </div>
+
+      <!-- SLIDER  -->
+
+      <div class="carousel slide rounded mt-2">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="/images/slider.webp" class="d-block w-100" alt="slider">
+          </div>
+          <div class="carousel-item">
+            <img src="/images/slider.webp" class="d-block w-100" alt="sliderimg2">
+          </div>
+          <div class="carousel-item">
+            <img src="/images/slider.webp" class="d-block w-100" alt="slider3">
+          </div>
+        </div>
+      </div>
+
+      <!-- CATEGORIES SECTION  -->
+
+      <section class="categories-section container-fluid mt-4 p-5">
+        <h4 class="fw-bold">All categories</h4>
+
+        <div class="row pt-4">
+          <div class="col">
+            <div class="col-img">
+              <img src="/images/mobiles.png" alt="mobiles">
+              <p class="fw-bold text-center">Mobiles</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="col-img">
+              <img src="/images/vehicles.png" alt="vehicles">
+              <p class="fw-bold text-center">Vehicles</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="col-img">
+              <img src="/images/house.png" alt="sale">
+              <p class="fw-bold text-center">Property For <br> Sale</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="col-img">
+              <img src="/images/property.png" alt="property">
+              <p class="fw-bold text-center">Property For <br> Rent</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="col-img">
+              <img src="/images/electronics.png" alt="electronics">
+              <p class="fw-bold text-center">Electronics & Home Apliances</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="col-img">
+              <img src="/images/bike.png" alt="bike">
+              <p class="fw-bold text-center">Bikes</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="col-img">
+              <img src="/images/agriculture.png" alt="mobiles">
+              <p class="fw-bold text-center">Business, Industrial & Agriculture</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Second Row  -->
+
+        <div class="row pt-4">
+          <div class="col">
+            <div class="col-img">
+              <img src="/images/service.png" alt="services">
+              <p class="fw-bold text-center">Services</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="col-img">
+              <img src="/images/jobs.png" alt="jobs">
+              <p class="fw-bold text-center">Jobs</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="col-img">
+              <img src="/images/animals.png" alt="animals">
+              <p class="fw-bold text-center">Animals</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="col-img">
+              <img src="/images/furniture.png" alt="furniture">
+              <p class="fw-bold text-center">Furniture & <br>Home Decor</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="col-img">
+              <img src="/images/fashion.png" alt="fashion">
+              <p class="fw-bold text-center">Fashion & <br> Beauty</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="col-img">
+              <img src="/images/books.png" alt="books">
+              <p class="fw-bold text-center">Books, Sports & Hobbies</p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="col-img">
+              <img src="/images/kids.png" alt="kids">
+              <p class="fw-bold text-center">Kids</p>
+            </div>
+          </div>
+        </div>
+
+      </section>
+
+      <!-- CATEGORIES SECTION ENDS-->
+
+
+      <!-- PRODUCT SECTION  -->
+
+      <section id="mobilePhones" class="container-fluid">
+        <h3>Mobile Phones</h3>
+
+        <div class="row">
+          <div class="card" style="width: 18rem;">
+            <img src="/images/iphone.webp" class="card-img-top" alt="iphone">
+            <div class="card-body">
+              <div class="price d-flex align-items-center justify-content-between">
+                <p class="fw-bold">Rs 47,000</p>
+                <i class="bi bi-suit-heart"></i>
+              </div>
+              <p class="card-text">iphone 15 pro max 256GB PTA On Easy Installment Plan</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
 
     <!-- JS CDN FILE  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
