--- a/index.html
+++ b/index.html
@@ -233,11 +233,15 @@
 
       <!-- PRODUCT SECTION  -->
 
-      <section id="mobilePhones" class="container-fluid">
-        <h3>Mobile Phones</h3>
+      <section id="mobilePhones" class="container-fluid ">
+       <div class="headings d-flex align-items-center justify-content-between">
+        <h3 class="mb-lg-4">Mobile Phones</h3>
+        <span class="fw-bold text-primary">View more <i class="bi bi-arrow-right ms-1 fw-bold"></i></span>
+       </div>
 
         <div class="row">
-          <div class="card" style="width: 18rem;">
+          <!-- 1st CARD  -->
+          <div class="card me-4" style="width: 18rem;">
             <img src="/images/iphone.webp" class="card-img-top" alt="iphone">
             <div class="card-body">
               <div class="price d-flex align-items-center justify-content-between">
@@ -245,6 +249,50 @@
                 <i class="bi bi-suit-heart"></i>
               </div>
               <p class="card-text">iphone 15 pro max 256GB PTA On Easy Installment Plan</p>
+              <p>Dar-e-Fatima, Karachi</p>
+              <small>4 weeks ago</small>
+            </div>
+          </div>
+
+          <!-- 2ND CARD  -->
+          <div class="card me-4" style="width: 18rem;">
+            <img src="/images/iphone.webp" class="card-img-top" alt="iphone">
+            <div class="card-body">
+              <div class="price d-flex align-items-center justify-content-between">
+                <p class="fw-bold">Rs 47,000</p>
+                <i class="bi bi-suit-heart"></i>
+              </div>
+              <p class="card-text">iphone 15 pro max 256GB PTA On Easy Installment Plan</p>
+              <p>Dar-e-Fatima, Karachi</p>
+              <small>4 weeks ago</small>
+            </div>
+          </div>
+
+          <!-- 3RD CARD  -->
+          <div class="card me-4" style="width: 18rem;">
+            <img src="/images/iphone.webp" class="card-img-top" alt="iphone">
+            <div class="card-body">
+              <div class="price d-flex align-items-center justify-content-between">
+                <p class="fw-bold">Rs 47,000</p>
+                <i class="bi bi-suit-heart"></i>
+              </div>
+              <p class="card-text">iphone 15 pro max 256GB PTA On Easy Installment Plan</p>
+              <p>Dar-e-Fatima, Karachi</p>
+              <small>4 weeks ago</small>
+            </div>
+          </div>
+
+          <!-- 4TH CARD  -->
+          <div class="card me-4" style="width: 18rem;">
+            <img src="/images/iphone.webp" class="card-img-top" alt="iphone">
+            <div class="card-body">
+              <div class="price d-flex align-items-center justify-content-between">
+                <p class="fw-bold">Rs 47,000</p>
+                <i class="bi bi-suit-heart"></i>
+              </div>
+              <p class="card-text">iphone 15 pro max 256GB PTA On Easy Installment Plan</p>
+              <p>Dar-e-Fatima, Karachi</p>
+              <small>4 weeks ago</small>
             </div>
           </div>
         </div>
