--- a/index.html
+++ b/index.html
@@ -233,9 +233,11 @@
 
       <!-- PRODUCT SECTION  -->
 
+      <!-- MOBILEPHONES  -->
+
       <section id="mobilePhones" class="container-fluid ">
        <div class="headings d-flex align-items-center justify-content-between">
-        <h3 class="mb-lg-4">Mobile Phones</h3>
+        <h3 class="mb-lg-4 fw-bold">Mobile Phones</h3>
         <span class="fw-bold text-primary">View more <i class="bi bi-arrow-right ms-1 fw-bold"></i></span>
        </div>
 
@@ -299,6 +301,293 @@
       </section>
 
 
+      <!-- BIKES & MOTORCYCLES  -->
+
+      <section id="motorcycles" class="container-fluid mt-4">
+        <div class="headings d-flex align-items-center justify-content-between">
+          <h3 class="mb-lg-4 fw-bold">Bikes & Motorcycles</h3>
+          <span class="fw-bold text-primary">View more <i class="bi bi-arrow-right ms-1 fw-bold"></i></span>
+         </div>
+
+        <div class="row">
+          <!-- 1st card  -->
+
+          <div class="card me-4" style="width: 18rem;">
+            <img src="/images/bike1.webp" class="card-img-top" alt="iphone">
+            <div class="card-body">
+              <div class="price d-flex align-items-center justify-content-between">
+                <p class="fw-bold">Rs 47,000</p>
+                <i class="bi bi-suit-heart"></i>
+              </div>
+              <p class="card-text">iphone 15 pro max 256GB PTA On Easy Installment Plan</p>
+              <p>Dar-e-Fatima, Karachi</p>
+              <small>4 weeks ago</small>
+            </div>
+          </div>
+
+          <!-- 2nd card  -->
+
+          <div class="card me-4" style="width: 18rem;">
+            <img src="/images/bike 2.webp" class="card-img-top" alt="iphone">
+            <div class="card-body">
+              <div class="price d-flex align-items-center justify-content-between">
+                <p class="fw-bold">Rs 445,000</p>
+                <i class="bi bi-suit-heart"></i>
+              </div>
+              <p class="card-text">Yamaha YBR 125 G Model (2024)</p>
+              <p>Jhang Sadar, Jhang</p>
+              <small>4 weeks ago</small>
+            </div>
+          </div>
+
+          <!-- 3rd card  -->
+
+          <div class="card me-4" style="width: 18rem;">
+            <img src="/images/bike1.webp" class="card-img-top" alt="iphone">
+            <div class="card-body">
+              <div class="price d-flex align-items-center justify-content-between">
+                <p class="fw-bold">Rs 47,000</p>
+                <i class="bi bi-suit-heart"></i>
+              </div>
+              <p class="card-text">iphone 15 pro max 256GB PTA On Easy Installment Plan</p>
+              <p>Dar-e-Fatima, Karachi</p>
+              <small>4 weeks ago</small>
+            </div>
+          </div>
+
+          <!-- 4th card  -->
+
+          <div class="card me-4" style="width: 18rem;">
+            <img src="/images/bike 2.webp" class="card-img-top" alt="iphone">
+            <div class="card-body">
+              <div class="price d-flex align-items-center justify-content-between">
+                <p class="fw-bold">Rs 47,000</p>
+                <i class="bi bi-suit-heart"></i>
+              </div>
+              <p class="card-text">iphone 15 pro max 256GB PTA On Easy Installment Plan</p>
+              <p>Dar-e-Fatima, Karachi</p>
+              <small>4 weeks ago</small>
+            </div>
+          </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- VIDEOS-AUDIOS  -->
+
+      <section id="videos&audios" class="container-fluid mt-4">
+        <div class="headings d-flex align-items-center justify-content-between">
+          <h3 class="mb-lg-4">Video-Audios</h3>
+          <span class="fw-bold text-primary">View more <i class="bi bi-arrow-right ms-1 fw-bold"></i></span>
+         </div>
+
+        <div class="row">
+          <!-- 1st card  -->
+
+          <div class="card me-4" style="width: 18rem;">
+            <img src="/images/audi1.webp" class="card-img-top" alt="iphone">
+            <div class="card-body">
+              <div class="price d-flex align-items-center justify-content-between">
+                <p class="fw-bold">Rs 47,000</p>
+                <i class="bi bi-suit-heart"></i>
+              </div>
+              <p class="card-text">iphone 15 pro max 256GB PTA On Easy Installment Plan</p>
+              <p>Dar-e-Fatima, Karachi</p>
+              <small>4 weeks ago</small>
+            </div>
+          </div>
+
+          <!-- 2nd card  -->
+
+          <div class="card me-4" style="width: 18rem;">
+            <img src="/images/bike 2.webp" class="card-img-top" alt="iphone">
+            <div class="card-body">
+              <div class="price d-flex align-items-center justify-content-between">
+                <p class="fw-bold">Rs 445,000</p>
+                <i class="bi bi-suit-heart"></i>
+              </div>
+              <p class="card-text">Yamaha YBR 125 G Model (2024)</p>
+              <p>Jhang Sadar, Jhang</p>
+              <small>4 weeks ago</small>
+            </div>
+          </div>
+
+          <!-- 3rd card  -->
+
+          <div class="card me-4" style="width: 18rem;">
+            <img src="/images/bike1.webp" class="card-img-top" alt="iphone">
+            <div class="card-body">
+              <div class="price d-flex align-items-center justify-content-between">
+                <p class="fw-bold">Rs 47,000</p>
+                <i class="bi bi-suit-heart"></i>
+              </div>
+              <p class="card-text">iphone 15 pro max 256GB PTA On Easy Installment Plan</p>
+              <p>Dar-e-Fatima, Karachi</p>
+              <small>4 weeks ago</small>
+            </div>
+          </div>
+
+          <!-- 4th card  -->
+
+          <div class="card me-4" style="width: 18rem;">
+            <img src="/images/bike 2.webp" class="card-img-top" alt="iphone">
+            <div class="card-body">
+              <div class="price d-flex align-items-center justify-content-between">
+                <p class="fw-bold">Rs 47,000</p>
+                <i class="bi bi-suit-heart"></i>
+              </div>
+              <p class="card-text">iphone 15 pro max 256GB PTA On Easy Installment Plan</p>
+              <p>Dar-e-Fatima, Karachi</p>
+              <small>4 weeks ago</small>
+            </div>
+          </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- TABLETS  -->
+
+      <section id="tablets" class="container-fluid mt-4">
+        <div class="headings d-flex align-items-center justify-content-between">
+          <h3 class="mb-lg-4 fw-bold">Tablets</h3>
+          <span class="fw-bold text-primary">View more <i class="bi bi-arrow-right ms-1 fw-bold"></i></span>
+         </div>
+
+        <div class="row">
+          <!-- 1st card  -->
+
+          <div class="card me-4" style="width: 18rem;">
+            <img src="/images/tab1.webp" class="card-img-top" alt="iphone">
+            <div class="card-body">
+              <div class="price d-flex align-items-center justify-content-between">
+                <p class="fw-bold">Rs 47,000</p>
+                <i class="bi bi-suit-heart"></i>
+              </div>
+              <p class="card-text">iphone 15 pro max 256GB PTA On Easy Installment Plan</p>
+              <p>Dar-e-Fatima, Karachi</p>
+              <small>4 weeks ago</small>
+            </div>
+          </div>
+
+          <!-- 2nd card  -->
+
+          <div class="card me-4" style="width: 18rem;">
+            <img src="/images/bike 2.webp" class="card-img-top" alt="iphone">
+            <div class="card-body">
+              <div class="price d-flex align-items-center justify-content-between">
+                <p class="fw-bold">Rs 445,000</p>
+                <i class="bi bi-suit-heart"></i>
+              </div>
+              <p class="card-text">Yamaha YBR 125 G Model (2024)</p>
+              <p>Jhang Sadar, Jhang</p>
+              <small>4 weeks ago</small>
+            </div>
+          </div>
+
+          <!-- 3rd card  -->
+
+          <div class="card me-4" style="width: 18rem;">
+            <img src="/images/bike1.webp" class="card-img-top" alt="iphone">
+            <div class="card-body">
+              <div class="price d-flex align-items-center justify-content-between">
+                <p class="fw-bold">Rs 47,000</p>
+                <i class="bi bi-suit-heart"></i>
+              </div>
+              <p class="card-text">iphone 15 pro max 256GB PTA On Easy Installment Plan</p>
+              <p>Dar-e-Fatima, Karachi</p>
+              <small>4 weeks ago</small>
+            </div>
+          </div>
+
+          <!-- 4th card  -->
+
+          <div class="card me-4" style="width: 18rem;">
+            <img src="/images/bike 2.webp" class="card-img-top" alt="iphone">
+            <div class="card-body">
+              <div class="price d-flex align-items-center justify-content-between">
+                <p class="fw-bold">Rs 47,000</p>
+                <i class="bi bi-suit-heart"></i>
+              </div>
+              <p class="card-text">iphone 15 pro max 256GB PTA On Easy Installment Plan</p>
+              <p>Dar-e-Fatima, Karachi</p>
+              <small>4 weeks ago</small>
+            </div>
+          </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- JOBS  -->
+
+      <section id="jobs" class="container-fluid mt-4">
+        <div class="headings d-flex align-items-center justify-content-between">
+          <h3 class="mb-lg-4 fw-bold">Jobs</h3>
+          <span class="fw-bold text-primary">View more <i class="bi bi-arrow-right ms-1 fw-bold"></i></span>
+         </div>
+
+        <div class="row">
+          <!-- 1st card  -->
+
+          <div class="card me-4" style="width: 18rem;">
+            <img src="/images/job1.webp" class="card-img-top" alt="iphone">
+            <div class="card-body">
+              <div class="price d-flex align-items-center justify-content-between">
+                <p class="fw-bold">Rs 47,000</p>
+                <i class="bi bi-suit-heart"></i>
+              </div>
+              <p class="card-text">iphone 15 pro max 256GB PTA On Easy Installment Plan</p>
+              <p>Dar-e-Fatima, Karachi</p>
+              <small>4 weeks ago</small>
+            </div>
+          </div>
+
+          <!-- 2nd card  -->
+
+          <div class="card me-4" style="width: 18rem;">
+            <img src="/images/bike 2.webp" class="card-img-top" alt="iphone">
+            <div class="card-body">
+              <div class="price d-flex align-items-center justify-content-between">
+                <p class="fw-bold">Rs 445,000</p>
+                <i class="bi bi-suit-heart"></i>
+              </div>
+              <p class="card-text">Yamaha YBR 125 G Model (2024)</p>
+              <p>Jhang Sadar, Jhang</p>
+              <small>4 weeks ago</small>
+            </div>
+          </div>
+
+          <!-- 3rd card  -->
+
+          <div class="card me-4" style="width: 18rem;">
+            <img src="/images/bike1.webp" class="card-img-top" alt="iphone">
+            <div class="card-body">
+              <div class="price d-flex align-items-center justify-content-between">
+                <p class="fw-bold">Rs 47,000</p>
+                <i class="bi bi-suit-heart"></i>
+              </div>
+              <p class="card-text">iphone 15 pro max 256GB PTA On Easy Installment Plan</p>
+              <p>Dar-e-Fatima, Karachi</p>
+              <small>4 weeks ago</small>
+            </div>
+          </div>
+
+          <!-- 4th card  -->
+
+          <div class="card me-4" style="width: 18rem;">
+            <img src="/images/bike 2.webp" class="card-img-top" alt="iphone">
+            <div class="card-body">
+              <div class="price d-flex align-items-center justify-content-between">
+                <p class="fw-bold">Rs 47,000</p>
+                <i class="bi bi-suit-heart"></i>
+              </div>
+              <p class="card-text">iphone 15 pro max 256GB PTA On Easy Installment Plan</p>
+              <p>Dar-e-Fatima, Karachi</p>
+              <small>4 weeks ago</small>
+            </div>
+          </div>
+          </div>
+        </div>
+      </section>
 
     <!-- JS CDN FILE  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
