working on footer

--- a/index.html
+++ b/index.html
@@ -589,6 +589,59 @@
         </div>
       </section>
 
+      <!-- FOOTER SECTION  -->
+
+      <footer class="container-fluid px-5">
+        <div class="row">
+            <div class="col-md-3">
+                <ul>
+                    <li class="h6 text-uppercase fw-bold">Popular Categories</li>
+                    <li>Cars</li>
+                    <li>Flats for rent</li>
+                    <li>Mobile Phones</li>
+                    <li>Jobs</li>
+                </ul>
+            </div>
+            <div class="col-md-3">
+                <ul>
+                    <li class="h6 text-uppercase fw-bold">Trending Searches
+                    </li>
+                    <li>Bikes</li>
+                    <li>Watches</li>
+                    <li>Books</li>
+                    <li>Dogs</li>
+                </ul>
+            </div>
+
+            <div class="col-md-2">
+                <ul>
+                    <li class="h6 text-uppercase fw-bold">About Us</li>
+                    <li>About Dubizzle Group
+                    </li>
+                    <li>OLX Blog</li>
+                    <li>Contact Us</li>
+                    <li>OLX for Businesses</li>
+                </ul>
+            </div>
+
+            <div class="col-md-2">
+                <ul>
+                    <li class="h6 text-uppercase fw-bold">OLX</li>
+                    <li>Help</li>
+                    <li>Sitemap</li>
+                    <li>Terms of use</li>
+                    <li>Privacy Policy</li>
+                </ul>
+            </div>
+
+            <div class="col-md-2">
+                <ul>
+                    <li class="h6 text-uppercase fw-bold">Follow us</li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+
     <!-- JS CDN FILE  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
